# kuristo

./: CMakeLists.txt  Justfile  README.md
examples/: hello-world.toml
src/: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp  task.hpp  tasks.cpp  tasks.hpp
